tests/out/error/loop/label_not_exists.out
tests/out/error/loop/label_not_exists.in.bt:2:6 error: label "my_label" not found
